<resources>
    <string name="app_name" translatable="false">Top 10 Market Cap</string>
    <string name="tv_price">Price Graph (7d)</string>
    <string name="tv_marketcap" translatable="false">Market Cap</string>
    <string name="tv_vol24" translatable="false">Volume 24h:</string>
    <string name="tv_chan1h">Change 1h:</string>
    <string name="tv_chan24h">Change 24h:</string>
    <string name="tv_cha7d">"Change 7d: "</string>
</resources>
