<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">


    <TextView
        android:id="@+id/tv_price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="#990000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_coin2" />

    <TextView
        android:id="@+id/tv_chan7d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/tv_lab_chan7d"
        app:layout_constraintTop_toBottomOf="@+id/tv_chan24h" />

    <TextView
        android:id="@+id/tv_chan1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/tv_lab_chan1h"
        app:layout_constraintTop_toBottomOf="@+id/tv_vol24h" />

    <TextView
        android:id="@+id/tv_chan24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/tv_lab_chan24h"
        app:layout_constraintTop_toBottomOf="@+id/tv_chan1h" />

    <TextView
        android:id="@+id/tv_lab_chan7d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_chan24h"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/img_graph"
        app:layout_constraintTop_toBottomOf="@+id/tv_lab_chan24h" />

    <TextView
        android:id="@+id/tv_lab_chan24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_chan24h"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/img_graph"
        app:layout_constraintTop_toBottomOf="@+id/tv_lab_chan1h" />

    <TextView
        android:id="@+id/tv_lab_chan1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_chan1h"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/img_graph"
        app:layout_constraintTop_toBottomOf="@+id/tv_lab_vol24h" />

    <TextView
        android:id="@+id/tv_vol24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/tv_lab_vol24h"
        app:layout_constraintTop_toBottomOf="@+id/img_graph" />

    <TextView
        android:id="@+id/tv_lab_vol24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_vol24"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/img_graph"
        app:layout_constraintTop_toBottomOf="@+id/img_graph" />

    <TextView
        android:id="@+id/tv_marketcap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lab_marketcap" />

    <TextView
        android:id="@+id/tv_lab_marketcap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_marketcap"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price2" />

    <TextView
        android:id="@+id/tv_coin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lab_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_price"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_marketcap" />

    <ImageView
        android:id="@+id/img_coin2"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tv_coin2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_of_dollar" />

    <ImageView
        android:id="@+id/img_graph"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#999999"
        android:padding="1dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lab_price"
        app:srcCompat="@drawable/btc_graph" />

</android.support.constraint.ConstraintLayout>

</ScrollView>